@@ -410,7 +410,12 @@ Component *ReloadableMedia::reloadTexture()
             {
                 foundComponent = findComponent(selectedItem->collectionInfo->name, type, type, "", true, false);
             }
-
+            
+            // check selected item that's a collection
+            if (!foundComponent && !selectedItem->leaf)
+            {
+                foundComponent = findComponent(selectedItem->name, type, type, "", true, false);
+            }
         }
         else
         {
@@ -523,18 +528,7 @@ Component* ReloadableMedia::findComponent(
             }
             else
             {
-                if (commonMode_)
-                {
-                    imagePath = Utils::combinePath(Configuration::absolutePath, "collections", "_common");
-                    if (systemMode)
-                        imagePath = Utils::combinePath(imagePath, "system_artwork");
-                    else
-                        imagePath = Utils::combinePath(imagePath, "medium_artwork", type);
-                }
-                else
-                {
-                    config_.getMediaPropertyAbsolutePath(collection, type, systemMode, imagePath);
-                }
+                config_.getMediaPropertyAbsolutePath(collection, type, systemMode, imagePath);
             }
         }
     }
